# double-dabble

./: Cargo.toml  README.md  Taskfile.yml
benches/: bcd2bin.rs  bin2bcd.rs
src/: bcd2bin.rs  bin2bcd.rs  lib.rs
